--- a/styles/_about-mars.scss
+++ b/styles/_about-mars.scss
@@ -1,5 +1,5 @@
 .about-mars {
-    max-width: 1500px;
+    // max-width: 1200px;
     background-color: $background-color-two;
     display: grid;
     grid-gap: 2em;
@@ -9,19 +9,24 @@
     align-items: center;
     padding: 2.5em 2.5em 5em 2.5em;
     @media (min-width: 650px) {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    @media (min-width: 780px) {
         padding-left: 10%;
         padding-right: 10%;
     }
-    @media (min-width: 1000px) {
+    @media (min-width: 1300px) {
         grid-template-columns: 2fr 1fr;
         grid-row: auto auto auto;
     }
-    @media (min-width: 1400px) {
+    @media (min-width: 1600px) {
         padding-left: 15%;
         padding-right: 15%;
     }
     &__article {
         // width: 80%;
+        background: $textandbackground-color-one;
         display: grid;
         grid-template-areas:
             "picture"
@@ -33,23 +38,23 @@
         justify-items: center;
         padding: 1em;
         grid-gap: 1.5em;
+        @extend %boxshadow;
         &-two {
+            background: $textandbackground-color-one;
             display: grid;
             grid-template-areas:
                 "picture"
                 "text"
                 "text";
-            grid-row: reperat(3, 200px);
-            grid-column: auto;
-            grid-auto-flow: row;
             justify-items: center;
-            padding: 0;
             grid-gap: 1.5em;
+            @extend %boxshadow;
+            padding: 1em;
+
             @media (min-width: 650px) {
-                // width: 100%;
                 grid-template-areas: "picture space text";
                 grid-column: 200px 50px 1fr;
-                grid-row: auto;
+                padding: 0;
             }
         }
         @media (min-width: 650px) {
@@ -66,46 +71,46 @@
         font-size: 30px;
         color: #2c4f80;
         grid-column: span 2;
-        // @media (min-width: 1000px) {
-        //     grid-column: span 2;
-        // }
     }
     &__picture-wrapper {
         grid-area: picture;
         position: relative;
-        //width: 100%;
-        height: 100%;
+        width: 300px;
+        height: 300px;
         display: flex;
         align-items: center;
+        justify-content: center;
         &__item {
-            width: 200px;
-            height: 200px;
+            width: 60%;
+            height: 60%;
             &-two {
-               @extend %picturepoperties;
+                @extend %picturepoperties;
             }
         }
         &-two {
-        grid-area: picture;
-        position: relative;
-        //width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
+            grid-area: picture;
+            position: relative;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            width: fit-content;
+            @media (min-width: 320px) {
+                width: 316px;
+            }
+
+            // height: 300px;
         }
     }
     &__article-wrapper {
         grid-area: text;
         @extend %textprops;
-        width: 100%;
+        width: 80%;
+        @media (min-width: 320px) {
+            width: 100%;
+        }
         &__heading {
             @extend %headingprops;
         }
-    }
-}
-.about-mars__article {
-    background: $textandbackground-color-one;
-    &-two {
-        background: $textandbackground-color-one;
     }
 }
 .read-more {
@@ -119,32 +124,36 @@
 
 .about-mars__article:nth-of-type(1) {
     grid-column: 1 / -1;
-    @media (min-width: 1000px) {
+    @media (min-width: 1300px) {
         grid-column: 1 / 2;
     }
 }
 .about-mars__article-two {
     grid-column: 1 / -1;
-    @media (min-width: 1000px) {
+    @media (min-width: 1300px) {
         grid-row: 3;
         grid-column: 1 / 2;
     }
 }
 .about-mars__article:nth-of-type(3) {
     grid-column: 1 / -1;
-    @media (min-width: 1000px) {
+    @media (min-width: 1300px) {
         padding-top: 0;
-        padding-bottom: 0;
+        // padding-bottom: 0;
         height: 100%;
         grid-row: span 2;
         grid-column: 2;
     }
 }
 .three {
-    @media (min-width: 1000px) {
+    @media (min-width: 1300px) {
         grid-template-areas:
             "picture"
-            "space"
+            // "space"
             "text";
+        padding-bottom: 0;
     }
+}
+.two {
+    padding: 2em 1em 6em 0;
 }
