--- a/styles/_banner.scss
+++ b/styles/_banner.scss
@@ -10,8 +10,9 @@
     align-items: center;
     position: relative;
     &__text-wrapper {
-        @media (min-width: 800px){
-            width:30%;
+        z-index: 2;
+        @media (min-width: 800px) {
+            width: 30%;
         }
         padding: 5%;
         &__heading {
@@ -29,14 +30,43 @@
             letter-spacing: 1.48px;
         }
     }
-    &__overlay {
-        background: blue;
-        border: lightblue;
-        clip-path: circle(50% at 50% 0%);
-        z-index: 1;
-        opacity: 0.7;
+    // &__overlay {
+    //     background: blue;
+    //     border: lightblue;
+    //     clip-path: circle(200px);
+    //     z-index: 1;
+    //     opacity: 0.7;
+    //     position: absolute;
+    //     align-self: flex-start;
+    //     // transform: rotate(12deg);
+    // }
+    .text-wrapper::before {
+        background: red;
         position: absolute;
-        align-self: flex-start;
-        // transform: rotate(12deg);
+        content: "";
+        width: 200px;
+        height: 200px;
+        clip-path: circle(500px);
     }
+}
+// .banner::before {
+//     z-index: 1;
+//     background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
+//     position: absolute;
+//     content: "";
+//     width: 100vw;
+//     height: 100vh;
+//     margin-top: 0;
+//     align-self: flex-start;
+//     clip-path: ellipse(69% 60% at 61% 22%);
+// }
+
+.banner::after {
+    background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
+    content: "";
+    width: 500px;
+    height: 500px;
+    border: 10px solid #979797;
+    border-radius: 100%;
+    margin-top: 0;
 }
