--- a/styles/_navbar-head.scss
+++ b/styles/_navbar-head.scss
@@ -11,15 +11,20 @@
         width: 100%;
         display: flex;
         justify-content: space-around;
-        @media (min-width: 500px) {
+        @media (min-width: 530px) {
             justify-content: flex-end;
+            padding-right: 2em;
         }
     }
     &__list {
         display: contents;
         list-style: none;
+
         &__item {
             display: contents;
+            &--active {
+                border-bottom: 4px solid red;
+            }
         }
         &__link {
             padding: 0.2em;
@@ -31,6 +36,9 @@
                 padding: 1em;
             }
         }
+        // &__link--active {
+        //     text-decoration: underline;
+        // }
     }
     @media (min-width: 500px) {
         justify-content: space-between;
