--- a/styles/_banner-contact.scss
+++ b/styles/_banner-contact.scss
@@ -9,32 +9,71 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 100vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    min-height: 110vh;
+    display: grid;
+    // justify-content: start;
+    align-items: center;
     position: relative;
     &__text-wrapper {
-        padding: 5%;
-        @media (min-width: 800px) {
-            width: 30%;
+        z-index: 2;
+        grid-column: 1 / -1;
+        grid-row: 1/ -1;
+        padding: 20% 10%;
+        justify-self: center;
+        align-self: start;
+        width: 70%;
+        @media (min-width: 700px) {
+            width: 40%;
+            justify-self: start;
+            align-self: end;
+            padding: 10% 10% 3%;
+        }
+        @media (min-width: 1000px) {
+            width: 40%;
+        }
+        @media (min-width: 1100px) {
+            width: 40%;
+        }
+        @media (min-width: 1650px) {
+            width: 35%;
         }
         &__heading {
             margin-top: 0;
-            font-size: 3em;
-            font-weight: 800;
-            letter-spacing: 2.22px;
+            @extend %firstheadings;
             color: $textandbackground-color-one;
-            border-bottom: 5px solid $textandbackground-color-one;
+            @media (min-width: 400px) {
+                font-size: 3em;
+            }
+            @media (min-width: 1500px) {
+                font-size: 4em;
+            }
         }
         &__text {
-            color: #436dac;
-            font-size: 2em;
-            font-weight: bold;
-            letter-spacing: 1.48px;
+            @extend %herotext;
         }
     }
     &__line {
         border: 3px solid $textandbackground-color-one;
     }
+}
+.banner-contact::after,
+.banner-contact::before {
+    z-index: 1;
+    background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
+    // display: block;
+    position: absolute;
+    content: "";
+    width: 100vw;
+    height: 110vh;
+    margin-top: 0;
+    align-self: flex-start;
+
+    clip-path: ellipse(70% 57% at 31% 100%);
+    // transform: rotate(-5deg);
+    // clip-path: ellipse(72% 57% at 29% 100%);
+}
+
+.banner-contact::before {
+    transform: translateY(-20px);
+    background: rgba(67, 109, 172, 0.9);
 }
