--- a/styles/_banner-faq.scss
+++ b/styles/_banner-faq.scss
@@ -9,45 +9,70 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 100vh;
-    display: flex;
-    justify-content: flex-end;
+    min-height: 110vh;
+    display: grid;
+    // justify-content: end;
     align-items: center;
     position: relative;
     &__text-wrapper {
-        padding: 5%;
-        @media (min-width: 800px) {
+        z-index: 2;
+        grid-column: 1 / -1;
+        grid-row: 1/ -1;
+        padding: 20% 10%;
+        justify-self: center;
+        align-self: start;
+        width: 70%;
+        @media (min-width: 700px) {
+            width: 40%;
+            justify-self: end;
+            align-self: start;
+            padding: 10% 10%;
+        }
+        @media (min-width: 1000px) {
+            width: 40%;
+        }
+        @media (min-width: 1500px) {
+            width: 40%;
+        }
+        @media (min-width: 1820px) {
             width: 30%;
         }
+
         &__heading {
             margin-top: 0;
-            font-size: 3em;
-            font-weight: 800;
-            letter-spacing: 2.22px;
+            @extend %firstheadings;
             color: $textandbackground-color-one;
-            border-bottom: 5px solid $textandbackground-color-one;
+            @media (min-width: 400px) {
+                font-size: 3em;
+            }
+            @media (min-width: 1100px) {
+                font-size: 4em;
+            }
         }
         &__text {
-            color: #436dac;
-            font-size: 2em;
-            font-weight: bold;
-            letter-spacing: 1.48px;
+            @extend %herotext;
         }
     }
     &__line {
         border: 3px solid $textandbackground-color-one;
     }
-    &__overlay {
-        width: 100%;
-        height: 65%;
-        background: linear-gradient(
-            182deg,
-            #00132c 61%,
-            rgba(21, 52, 98, 0.9) -13%
-        );
-        opacity: 0.7;
-        position: absolute;
-        align-self: flex-start;
-        // transform: rotate(12deg);
-    }
+}
+.banner-faq::after,
+.banner-faq::before {
+    z-index: 1;
+    background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
+    // display: block;
+    position: absolute;
+    content: "";
+    width: 100vw;
+    height: 100vh;
+    margin-top: 0;
+    align-self: flex-start;
+    clip-path: ellipse(69% 60% at 61% 22%);
+    // transform: rotate(-5deg);
+}
+
+.banner-faq::before {
+    transform: translateY(20px);
+    background: rgba(67, 109, 172, 0.9);
 }
