--- a/styles/_banner-main.scss
+++ b/styles/_banner-main.scss
@@ -40,11 +40,8 @@
 
         &__heading {
             margin-top: 0;
-            font-size: 2.5em;
-            font-weight: 800;
-            letter-spacing: 2.22px;
+            @extend %firstheadings;
             color: $textandbackground-color-one;
-            border-bottom: 5px solid $textandbackground-color-one;
             @media (min-width: 400px) {
                 font-size: 3em;
             }
@@ -53,22 +50,9 @@
             }
         }
         &__text {
-            color: #436dac;
-            font-size: 2em;
-            font-weight: bold;
-            letter-spacing: 1.48px;
+            @extend %herotext;
         }
     }
-    // &__overlay {
-    //     background: blue;
-    //     border: lightblue;
-    //     clip-path: circle(200px);
-    //     z-index: 1;
-    //     opacity: 0.7;
-    //     position: absolute;
-    //     align-self: flex-start;
-    //     // transform: rotate(12deg);
-    // }
 }
 .banner::after,
 .banner::before {
@@ -89,21 +73,3 @@
     transform: translateY(20px);
     background: rgba(67, 109, 172, 0.9);
 }
-// .banner::after {
-//     z-index: 1;
-//     height: 100%;
-//     width: 100%;
-//     background-image: linear-gradient(to bottom, #c15555, #240202);
-// }
-
-// .banner::after {
-//     grid-column: 1 / -1;
-//     grid-row: 1/ -1;
-//     background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
-//     content: "";
-//     width: 150vw;
-//     height: 100vw;
-//     border: 10px solid #979797;
-//     border-radius: 100%;
-//     margin: -60% -30% 0 -5%;
-// }
