--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,20 @@ label {
           box-shadow: 0 2px 5px 0 rgba(160, 160, 160, 0.5);
 }
 
+.banner__text-wrapper__heading, .banner-faq__text-wrapper__heading, .banner-contact__text-wrapper__heading {
+  font-size: 2.5em;
+  font-weight: 800;
+  letter-spacing: 2.2px;
+  border-bottom: 5px solid #ffffff;
+}
+
+.banner__text-wrapper__text, .banner-faq__text-wrapper__text, .banner-contact__text-wrapper__text {
+  color: #436dac;
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+}
+
 .banner {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -96,11 +110,7 @@ label {
 
 .banner__text-wrapper__heading {
   margin-top: 0;
-  font-size: 2.5em;
-  font-weight: 800;
-  letter-spacing: 2.22px;
   color: #ffffff;
-  border-bottom: 5px solid #ffffff;
 }
 
 @media (min-width: 400px) {
@@ -113,13 +123,6 @@ label {
   .banner__text-wrapper__heading {
     font-size: 4em;
   }
-}
-
-.banner__text-wrapper__text {
-  color: #436dac;
-  font-size: 2em;
-  font-weight: bold;
-  letter-spacing: 1.48px;
 }
 
 .banner::after,
@@ -198,22 +201,33 @@ main {
   display: contents;
 }
 
-.navbar-head__list__item--active {
-  border-bottom: 4px solid red;
-}
-
 .navbar-head__list__link {
   padding: 0.2em;
+  margin-bottom: 1em;
   text-decoration: none;
   color: #ffffff;
   font-weight: bold;
   letter-spacing: 0.59px;
+  -webkit-transition: 300ms;
+  transition: 300ms;
 }
 
 @media (min-width: 500px) {
   .navbar-head__list__link {
-    padding: 1em;
+    padding: 0.3em;
+    margin: 1em;
   }
+}
+
+@media (min-width: 770px) {
+  .navbar-head__list__link:hover {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+}
+
+.navbar-head__list__link--active {
+  border-bottom: 4px solid #e32700;
 }
 
 @media (min-width: 500px) {
@@ -240,6 +254,13 @@ main {
   width: 90px;
   -o-object-fit: contain;
      object-fit: contain;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.navbar-head__logo-wrapper__item:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .mars-one__main-info {
@@ -286,7 +307,7 @@ main {
 
 @media (min-width: 1000px) {
   .mars-one__info {
-    width: 42%;
+    width: 55%;
     padding: 5em;
   }
 }
@@ -591,13 +612,9 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  min-height: 110vh;
+  display: -ms-grid;
+  display: grid;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -605,10 +622,43 @@ main {
 }
 
 .banner-faq__text-wrapper {
-  padding: 5%;
+  z-index: 2;
+  grid-column: 1 / -1;
+  grid-row: 1/ -1;
+  padding: 20% 10%;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  width: 70%;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 700px) {
+  .banner-faq__text-wrapper {
+    width: 40%;
+    -ms-grid-column-align: end;
+        justify-self: end;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+    padding: 10% 10%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .banner-faq__text-wrapper {
+    width: 40%;
+  }
+}
+
+@media (min-width: 1500px) {
+  .banner-faq__text-wrapper {
+    width: 40%;
+  }
+}
+
+@media (min-width: 1820px) {
   .banner-faq__text-wrapper {
     width: 30%;
   }
@@ -616,32 +666,44 @@ main {
 
 .banner-faq__text-wrapper__heading {
   margin-top: 0;
-  font-size: 3em;
-  font-weight: 800;
-  letter-spacing: 2.22px;
   color: #ffffff;
-  border-bottom: 5px solid #ffffff;
 }
 
-.banner-faq__text-wrapper__text {
-  color: #436dac;
-  font-size: 2em;
-  font-weight: bold;
-  letter-spacing: 1.48px;
+@media (min-width: 400px) {
+  .banner-faq__text-wrapper__heading {
+    font-size: 3em;
+  }
+}
+
+@media (min-width: 1100px) {
+  .banner-faq__text-wrapper__heading {
+    font-size: 4em;
+  }
 }
 
 .banner-faq__line {
   border: 3px solid #ffffff;
 }
 
-.banner-faq__overlay {
-  width: 100%;
-  height: 65%;
-  background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9) -13%);
-  opacity: 0.7;
+.banner-faq::after,
+.banner-faq::before {
+  z-index: 1;
+  background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
   position: absolute;
+  content: "";
+  width: 100vw;
+  height: 100vh;
+  margin-top: 0;
   -ms-flex-item-align: start;
       align-self: flex-start;
+  -webkit-clip-path: ellipse(69% 60% at 61% 22%);
+          clip-path: ellipse(69% 60% at 61% 22%);
+}
+
+.banner-faq::before {
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  background: rgba(67, 109, 172, 0.9);
 }
 
 .facts {
@@ -810,10 +872,6 @@ main {
   }
 }
 
-.facts-article__todo__heading {
-  line-height: unset;
-}
-
 @media (min-width: 1000px) {
   .facts-article__todo__heading {
     padding-right: 3vw;
@@ -875,6 +933,15 @@ main {
   .far-travel-article__picture-wrapper {
     margin-right: 5%;
     min-width: 40%;
+    max-width: 40%;
+  }
+}
+
+@media (min-width: 1600px) {
+  .far-travel-article__picture-wrapper {
+    margin-right: 5%;
+    min-width: 30%;
+    max-width: 30%;
   }
 }
 
@@ -916,13 +983,28 @@ main {
 }
 
 .far-travel-article__img-item-2 {
-  height: 35px;
+  height: 30px;
   top: 15%;
 }
 
 .far-travel-article__img-item-3 {
   height: 30px;
   bottom: 25%;
+}
+
+.mars-orb {
+  border: solid 1px white;
+  border-radius: 50%;
+  height: 300px;
+  width: 300px;
+  position: absolute;
+}
+
+.mars {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-top: -15px;
 }
 
 .banner-contact {
@@ -933,47 +1015,98 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  min-height: 110vh;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
 }
 
 .banner-contact__text-wrapper {
-  padding: 5%;
+  z-index: 2;
+  grid-column: 1 / -1;
+  grid-row: 1/ -1;
+  padding: 20% 10%;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  width: 70%;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 700px) {
   .banner-contact__text-wrapper {
-    width: 30%;
+    width: 40%;
+    -ms-grid-column-align: start;
+        justify-self: start;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+    padding: 10% 10% 3%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .banner-contact__text-wrapper {
+    width: 40%;
+  }
+}
+
+@media (min-width: 1100px) {
+  .banner-contact__text-wrapper {
+    width: 40%;
+  }
+}
+
+@media (min-width: 1650px) {
+  .banner-contact__text-wrapper {
+    width: 35%;
   }
 }
 
 .banner-contact__text-wrapper__heading {
   margin-top: 0;
-  font-size: 3em;
-  font-weight: 800;
-  letter-spacing: 2.22px;
   color: #ffffff;
-  border-bottom: 5px solid #ffffff;
 }
 
-.banner-contact__text-wrapper__text {
-  color: #436dac;
-  font-size: 2em;
-  font-weight: bold;
-  letter-spacing: 1.48px;
+@media (min-width: 400px) {
+  .banner-contact__text-wrapper__heading {
+    font-size: 3em;
+  }
+}
+
+@media (min-width: 1500px) {
+  .banner-contact__text-wrapper__heading {
+    font-size: 4em;
+  }
 }
 
 .banner-contact__line {
   border: 3px solid #ffffff;
+}
+
+.banner-contact::after,
+.banner-contact::before {
+  z-index: 1;
+  background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
+  position: absolute;
+  content: "";
+  width: 100vw;
+  height: 110vh;
+  margin-top: 0;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  -webkit-clip-path: ellipse(70% 57% at 31% 100%);
+          clip-path: ellipse(70% 57% at 31% 100%);
+}
+
+.banner-contact::before {
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+  background: rgba(67, 109, 172, 0.9);
 }
 
 .join-in__heading-wrapper {
