--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "extend";
-@import "bannertest";
+@import "banner-main";
 @import "main";
 @import "navbar-head";
 @import "main-info";
